--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ ml-dtypes==0.4.1
 namex==0.0.8
 narwhals==1.13.5
 numpy==2.0.2
-opencv-python==4.10.0.84
+opencv-python-headless==4.10.0.84
 opt_einsum==3.4.0
 optree==0.13.1
 packaging==24.2
